<package format="2">
  <name>husky_keyboard_control</name>
  <version>1.0.0</version>
  <description>
    Husky Keyboard Control Setup.
  </description>
  <maintainer email="mareti@tamu.edu">Madhu Areti</maintainer>
  <license>AIMM</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>Curses</build_depend>
  <exec_depend>twist_mux</exec_depend>
  
</package>